// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Checkbox Testing Checkbox size Default 1`] = `
<div
  className="relative rounded-sm  flex justify-center  items-center bg-primary
          hover:bg-primary-shd8 focus:outline-none focus:ring-2 focus:ring-offset-primary-shd6 w-6 h-6 
          undefined"
  onClick={[Function]}
>
  <svg
    className="text-white"
    fill="none"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6.66632 10.3907L4.47099 8.19539L3.52832 9.13806L6.66632 12.2761L13.1377 5.80473L12.195 4.86206L6.66632 10.3907Z"
      fill="white"
    />
  </svg>
  <input
    checked={true}
    className="opacity-0 absolute cursor-pointer w-full h-full"
    onChange={[Function]}
    type="checkbox"
  />
</div>
`;

exports[`Testing Checkbox Testing Checkbox size Small 1`] = `
<div
  className="relative rounded-sm  flex justify-center  items-center bg-primary
          hover:bg-primary-shd8 focus:outline-none focus:ring-2 focus:ring-offset-primary-shd6 w-4 h-4 
          undefined"
  onClick={[Function]}
>
  <svg
    className="text-white"
    fill="none"
    height="12"
    viewBox="0 0 16 16"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6.66632 10.3907L4.47099 8.19539L3.52832 9.13806L6.66632 12.2761L13.1377 5.80473L12.195 4.86206L6.66632 10.3907Z"
      fill="white"
    />
  </svg>
  <input
    checked={true}
    className="opacity-0 absolute cursor-pointer w-full h-full"
    onChange={[Function]}
    type="checkbox"
  />
</div>
`;

exports[`Testing Checkbox Testing Checkbox with no props 1`] = `
<div
  className="relative rounded-sm  flex justify-center  items-center bg-primary
          hover:bg-primary-shd8 focus:outline-none focus:ring-2 focus:ring-offset-primary-shd6 w-4 h-4 
          undefined"
  onClick={[Function]}
>
  <svg
    className="text-white"
    fill="none"
    height="12"
    viewBox="0 0 16 16"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6.66632 10.3907L4.47099 8.19539L3.52832 9.13806L6.66632 12.2761L13.1377 5.80473L12.195 4.86206L6.66632 10.3907Z"
      fill="white"
    />
  </svg>
  <input
    checked={true}
    className="opacity-0 absolute cursor-pointer w-full h-full"
    onChange={[Function]}
    type="checkbox"
  />
</div>
`;
